--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   firebase_core: ^2.4.1
   firebase_auth: ^4.2.5
   email_validator: ^2.1.17
+  tmdb_api: ^2.1.4
+  google_nav_bar: ^5.0.6
+  cloud_firestore: ^4.3.2
+  firebase_database: ^10.0.10
+  google_sign_in: ^5.4.4
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
