--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.3.2
   firebase_database: ^10.0.10
   google_sign_in: ^5.4.4
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   flutter_test:
